# SAKU_BOT

./: main.py  pyproject.toml  render.yaml  requirements.txt
fonts/: desktop.ini
